--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,8 +2,8 @@ name: Sync from repoA
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every day at midnight
-  workflow_dispatch:      # Allows manual triggering of the workflow
+    - cron: '*/5 * * * *'  # Runs every 5 minutes
+  workflow_dispatch:        # Allows manual triggering of the workflow
 
 jobs:
   sync:
@@ -20,13 +20,15 @@ jobs:
           git remote add repoA https://github.com/ashwini-m1488/RepoA.git
           git fetch repoA
 
+      - name: Configure Git user
+        run: |
+          git config user.name "rahulrajanpk"
+          git config user.email "rahulrajanpk@gmail.com"
+
       - name: Pull changes from repoA
         run: |
           git config merge.ours.driver true
-          git pull repoA main --strategy-option=ours || true
-        env:
-          GIT_COMMITTER_NAME: GitHub Action
-          GIT_COMMITTER_EMAIL: action@github.com
+          git pull repoA main --strategy-option=theirs || true
 
       - name: Commit changes (if any)
         run: |
