--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,6 +5,9 @@ on:
     - cron: '*/5 * * * *'  # Runs every 5 minutes
   workflow_dispatch:        # Allows manual triggering of the workflow
 
+permissions:
+   contents: write
+
 jobs:
   sync:
     runs-on: ubuntu-latest
