--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
           
           echo "Pulling changes from upstream main branch..."
           git fetch upstream   # Fetch changes from upstream (or origin if pulling from a remote)
-          git merge -X ours upstream/main  # Automatically resolve conflicts by keeping upstream/main's changes
+          git merge -X ours upstream/main --allow-unrelated-histories  # Automatically resolve conflicts by keeping upstream/main's changes
 
       
       - name: Commit changes (if any)
