--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - name: Checkout repoB
         uses: actions/checkout@v3
+      - name: Set up Git user
+        run: |
+          git config --global user.name "rahulrajanpk"
+          git config --global user.email "rahulrajanpk@gmail.com"
         
       - name: List current remotes
         run: |
