--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Pull changes from upstream
         run: |
-          
+          git ls -la
           echo "Pulling changes from upstream main branch..."
           git fetch upstream   # Fetch changes from upstream (or origin if pulling from a remote)
           git merge -X ours upstream/main --allow-unrelated-histories  # Automatically resolve conflicts by keeping upstream/main's changes
