--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,8 +38,8 @@ jobs:
         run: |
           ls -la
           echo "Pulling changes from upstream main branch..."
-          git pull upstream main  # Fetch changes from upstream (or origin if pulling from a remote)
-         # git merge -X ours upstream/main --allow-unrelated-histories   Automatically resolve conflicts by keeping upstream/main's changes
+          git fetch upstream  # Fetch changes from upstream (or origin if pulling from a remote)
+          git merge -X ours upstream/main --allow-unrelated-histories   Automatically resolve conflicts by keeping upstream/main's changes
       - name: Status (if any)
         run: |
           git status
