--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,10 +36,7 @@ jobs:
 
       - name: Pull changes from upstream
         run: |
-          ls -la
-          echo "Pulling changes from upstream main branch..."
-          git fetch upstream  # Fetch changes from upstream (or origin if pulling from a remote)
-          git merge -X ours upstream/main --allow-unrelated-histories   Automatically resolve conflicts by keeping upstream/main's changes
+          git pull upstream/main --allow-unrelated-histories   Automatically resolve conflicts by keeping upstream/main's changes
       - name: Status (if any)
         run: |
           git status
