--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,8 @@ jobs:
 
       - name: Pull changes from upstream
         run: |
-          git pull upstream main --allow-unrelated-histories --strategy=ours  # Automatically resolve conflicts by keeping upstream/main's changes
+          git fetch upstream main 
+          git merge upstream/main --allow-unrelated-histories --strategy=ours  # Automatically resolve conflicts by keeping upstream/main's changes
       - name: Status (if any)
         run: |
           git status
