--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,19 +27,24 @@ jobs:
         run: |
           echo "Adding remote upstream..."
           git clone https://github.com/rahulrajanpk/RepoA.git
-          ls -l
+          ls -la
 
       - name: Add remote repoA of Ash
         run: |
           echo "Adding remote upstream..."
           git remote add upstream https://github.com/ashwini-m1488/RepoA.git || echo "Remote already exists"
+          
+      - name: View all remote
+        run: |
           git remote -v  # Verify the remote has been added
 
-      - name: Pull changes from upstream
+      - name: Fetch from upstream
         run: |
           git fetch upstream main 
-          ls -l
-          git status
+          ls -la
+          
+      - name: merge from upstream
+        run: |
           git merge upstream/main --allow-unrelated-histories --strategy=ours  # Automatically resolve conflicts by keeping upstream/main's changes
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/rahulrajanpk/RepoA.git
           echo "Pushing changes to origin..."
