--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Sync from repoA
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes
+    - cron: '*/* * * * *'  # Runs every 5 minutes
   workflow_dispatch:        # Allows manual triggering of the workflow
 permissions:
   contents: write
@@ -30,10 +30,14 @@ jobs:
           git fetch upstream main 
           ls -la
           
-      - name: merge from upstream
+      - name: Checkout from upstream
         run: |
           git checkout HEAD -- File1.txt File2.txt
-          git merge upstream/main --allow-unrelated-histories
+      - name: Merging
+        run: |
+          git merge upstream/main --allow-unrelated-histories --strategy=ours
+      - name: Push
+        run: |
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/rahulrajanpk/RepoA.git
           echo "Pushing changes to origin..."
           git push origin main
