--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Sync from repoA
 
 on:
   schedule:
-    - cron: '*/* * * * *'  # Runs every 5 minutes
+    - cron: '*/20 * * * *'  # Runs every 5 minutes
   workflow_dispatch:        # Allows manual triggering of the workflow
 permissions:
   contents: write
